--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <!-- Boxicons -->
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
   <!-- Style -->
-  <link rel="stylesheet" href="/style/style.css">
+  <link rel="stylesheet" href="./style/style.css" type="text/css">
   <!-- Reset CSS -->
-  <link rel="stylesheet" href="/style/app.css">
+  <link rel="stylesheet" href="./style/app.css" type="text/css">
 
   <title>Vaccination COVID-19</title>
 </head>
