--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </section>
       <!-- Ajustar tamano de imagen  -->
       <figure class="image-1">
-        <img src="/assets/img/vaccine1.jpg" alt="Vaccine" class="va1">
+        <img src="./assets/img/vaccine1.jpg" alt="Vaccine" class="va1">
       </figure>
       <section class="sec-schedule">
         <span class="sch"><i class='bx bxs-time-five iconC' style='color:#3353d1' ></i>Schedule your vaccinations</span>
@@ -63,16 +63,16 @@
     </article>
     <div class="logos">
       <figure class="logo">
-        <img src="/assets/logos/astrazeneca-1.svg" alt="logo astrazeneca" class="logo1">
+        <img src="./assets/logos/astrazeneca-1.svg" alt="logo astrazeneca" class="logo1">
       </figure>
       <figure class="logo">
-        <img src="/assets/logos/sinovac-seeklogo.com.svg" alt="logo sinovac" class="logo2">
+        <img src="./assets/logos/sinovac-seeklogo.com.svg" alt="logo sinovac" class="logo2">
       </figure>
       <figure class="logo">
-        <img src="/assets/logos/pfizer-2021-.svg" alt="logo pfizer" class="logo3">
+        <img src="./assets/logos/pfizer-2021-.svg" alt="logo pfizer" class="logo3">
       </figure>
       <figure class="logo">
-        <img src="/assets/logos/moderna-logo.svg" alt="logo moderna" class="logo4">
+        <img src="./assets/logos/moderna-logo.svg" alt="logo moderna" class="logo4">
       </figure>
     </div>
     <article class="content2">
@@ -120,7 +120,7 @@
     <article class="content3">
       <div class="img-back">
         <figure class="img-f">
-          <img src="/assets/img/vaccine2.png" alt="person with mask" class="img-w">
+          <img src="./assets/img/vaccine2.png" alt="person with mask" class="img-w">
         </figure>
         <div class="img-v"></div>
       </div>
@@ -208,7 +208,7 @@
       </section>
       <div class="img-2">
         <figure>
-          <img src="/assets/img/vaccine3.png" alt="doctor" class="img-d">
+          <img src="./assets/img/vaccine3.png" alt="doctor" class="img-d">
         </figure>
         <div class="img-v2"></div>
       </div>
